--- a/style.css
+++ b/style.css
@@ -6,6 +6,18 @@ p {
     margin: 0;
 }
 
+h1,
+h2,
+h3 {
+    font-family: 'PT Serif';
+    font-weight: 400;
+}
+
+p {
+    font-family: 'PT Sans';
+    font-weight: 400;
+}
+
 .container {
     max-width: 1400px;
     margin: 0 auto;
@@ -39,13 +51,85 @@ p {
 }
 
 .heading-section .title h1 {
-    font-family: 'PT Serif';
     font-size: 75px;
-    font-weight: 400;
     letter-spacing: 10px;
 }
 
 .heading-section .title p {
-    font-family: 'PT Sans';
     font-size: 42px;
+}
+
+.subheading-section {
+    text-align: center;
+}
+
+.subheading-section p {
+    padding: 60px;
+    font-size: 24px;
+    letter-spacing: 1.5px;
+}
+
+.grid-section .content {
+    display: grid;
+    grid-template-columns: 25fr 30fr 45fr;
+    grid-template-areas: 
+    "firstLeft firstCenter firstRight"
+    "secondLeft secondCenter ssecondRight"
+    "thirdLeft thirdCenter sthirdRight"
+    "fourthLeft fourthCenter sfourthRight";
+    gap: 30px;
+    padding: 0 60px;
+}
+
+.grid-section .content .number {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #86ddf3;
+    font-family: "PT Serif";
+    font-size: 200px;
+    color: #fff;
+}
+
+.grid-section .content .text {
+    text-align: center;
+    padding: 20px 0;
+}
+
+.grid-section .content .text h2 {
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+
+.grid-section .content .text p {
+    font-size: 30px;
+}
+
+.grid-section .content img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.grid-section .number:nth-of-type(1) {
+    grid-area: firstLeft;
+}
+
+.grid-section .text:nth-of-type(1) {
+    grid-area: firstCenter;
+}
+
+.grid-section img:nth-of-type(1) {
+    grid-area: firstRight;
+    width: 100%;
+}
+
+.grid-section .number:nth-of-type(2) {
+    grid-area: secondCenter;
+}
+
+.grid-section img:nth-of-type(2) {
+    grid-area: secondLeft;
+    width: 100%;
 }
