--- a/style.css
+++ b/style.css
@@ -19,20 +19,21 @@ p {
 }
 
 .container {
+    position: relative;
     max-width: 1400px;
     margin: 0 auto;
 }
 
-.heading-section {
+.header {
     height: 100vh;
     overflow: hidden;
 }
 
-.heading-section .container {
+.header .container {
     height: 100%;
 }
 
-.heading-section img {
+.header img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -40,22 +41,24 @@ p {
     filter: brightness(0.9);
 }
 
-.heading-section .title {
+.header .title {
     position: absolute;
     width: 100%;
     top: 20vh;
+    left: 0;
+    right: 0;
     text-align: center;
     color: #fff;
     z-index: 2;
 
 }
 
-.heading-section .title h1 {
+.header .title h1 {
     font-size: 75px;
     letter-spacing: 10px;
 }
 
-.heading-section .title p {
+.header .title p {
     font-size: 42px;
 }
 
@@ -74,11 +77,12 @@ p {
     grid-template-columns: 25fr 30fr 45fr;
     grid-template-areas: 
     "firstLeft firstCenter firstRight"
-    "secondLeft secondCenter ssecondRight"
-    "thirdLeft thirdCenter sthirdRight"
-    "fourthLeft fourthCenter sfourthRight";
+    "secondLeft secondCenter secondRight"
+    "thirdLeft thirdCenter thirdRight"
+    "fourthLeft fourthCenter fourthRight";
     gap: 30px;
     padding: 0 60px;
+    margin-bottom: 100px;
 }
 
 .grid-section .content .number {
@@ -106,30 +110,107 @@ p {
     font-size: 30px;
 }
 
-.grid-section .content img {
+.grid-section .content .image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.grid-section .number:nth-of-type(1) {
+#number-1 {
     grid-area: firstLeft;
 }
 
-.grid-section .text:nth-of-type(1) {
+#text-1 {
     grid-area: firstCenter;
 }
 
-.grid-section img:nth-of-type(1) {
+#image-1 {
     grid-area: firstRight;
-    width: 100%;
 }
 
-.grid-section .number:nth-of-type(2) {
+#number-2 {
     grid-area: secondCenter;
 }
 
-.grid-section img:nth-of-type(2) {
+#image-2 {
     grid-area: secondLeft;
+}
+
+#text-2 {
+    grid-area: secondRight;
+}
+
+#text-3 {
+    grid-area: thirdLeft;
+}
+
+#number-3 {
+    grid-area: thirdCenter;
+}
+
+#image-3 {
+    grid-area: 3/thirdRight/5/fourthRight;
+}
+
+#text-4 {
+    grid-area: fourthLeft;
+}
+
+#number-4 {
+    grid-area: fourthCenter;
+}
+
+.footer {
+    margin-bottom: 30px;
+}
+
+.footer .content {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.footer .content .text {
+    flex: 0 0 50%;
+    margin-top: 50px;
+}
+
+.footer .content .text .text-content {
+    padding: 30px 50px 250px 100px;
+}
+
+.footer .content .text h2 {
+    width: 65%;
+   font-size: 90px;
+   font-weight: 700;
+   margin-bottom: 30px;
+}
+
+.footer .content .text p {
+    font-size: 26px;
+    line-height: 1.5;
+}
+
+.footer .content .image {
+    flex: 0 0 50%;
+}
+
+.footer .content .image img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.footer .hashtag {
+    position: absolute;
+    color: #86ddf3;
+    font-weight: 700;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    font-size: 150px;
+    padding-left: 1.3%;
+}
+
+.footer .hashtag span {
+    color: #fff;
 }
